Test against JDK21 (#1017)
* Test against JDK21

* Add PR workflow for JDK21

* JDK21 returns empty string in `getSimpleName()` for closures